--- a/app/src/main/res/layout/activity_user_manager.xml
+++ b/app/src/main/res/layout/activity_user_manager.xml
@@ -54,37 +54,32 @@
             android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     <Button
-            android:text="List"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnList"
-            app:layout_constraintTop_toBottomOf="@+id/edtPhone"
-            android:layout_marginTop="30dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnDelete"/>
-    <Button
             android:text="Delete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnDelete"
+            android:layout_height="wrap_content" android:id="@+id/DELETE"
             app:layout_constraintTop_toBottomOf="@+id/edtPhone"
-            android:layout_marginTop="30dp" app:layout_constraintEnd_toStartOf="@+id/btnList"
-            android:layout_marginStart="9dp" app:layout_constraintStart_toEndOf="@+id/btnUpdate"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="9dp" app:layout_constraintStart_toEndOf="@+id/UPDATE"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="Update"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnUpdate"
+            android:layout_height="wrap_content" android:id="@+id/UPDATE"
             app:layout_constraintTop_toBottomOf="@+id/edtPhone"
-            android:layout_marginTop="30dp" app:layout_constraintEnd_toStartOf="@+id/btnDelete"
-            app:layout_constraintStart_toEndOf="@+id/btnAdd"/>
+            android:layout_marginTop="30dp" app:layout_constraintEnd_toStartOf="@+id/DELETE"
+            app:layout_constraintStart_toEndOf="@+id/ADD"/>
     <Button
             android:text="Add"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnAdd"
+            android:layout_height="wrap_content" android:id="@+id/ADD"
             app:layout_constraintTop_toBottomOf="@+id/edtPhone"
             android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnUpdate"/>
+            app:layout_constraintEnd_toStartOf="@+id/UPDATE"/>
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="351dp"
-            android:layout_height="226dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnList" app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/result"/>
+            android:layout_width="366dp"
+            android:layout_height="85dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/result" app:layout_constraintTop_toBottomOf="@+id/UPDATE"
+            android:layout_marginTop="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
