--- a/app/src/main/res/layout/user_manager_item.xml
+++ b/app/src/main/res/layout/user_manager_item.xml
@@ -2,36 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="409dp"
-            android:layout_height="729dp" tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="1dp">
-
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="343dp"
+            android:layout_height="20dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/txt_id"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/txt_username"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>
+                android:layout_height="wrap_content" android:id="@+id/txt_id" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/txt_username"
-                app:layout_constraintEnd_toStartOf="@+id/txt_code"
-                app:layout_constraintStart_toEndOf="@+id/txt_id" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="15dp"/>
+                android:layout_height="wrap_content" android:id="@+id/txt_username" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/txt_code"
-                app:layout_constraintStart_toEndOf="@+id/txt_username"
-                app:layout_constraintEnd_toStartOf="@+id/txt_phone" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="15dp"/>
+                android:layout_height="wrap_content" android:id="@+id/txt_code" android:layout_weight="1"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/txt_phone"
-                app:layout_constraintStart_toEndOf="@+id/txt_code" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="wrap_content" android:id="@+id/txt_phone" android:layout_weight="1"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
