--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,9 @@
         android:layout_height="55dp"
         android:layout_marginTop="236dp"
         android:hint="@string/prompt_email"
+        android:textColorHighlight="@color/white"
+        android:backgroundTint="@color/white"
+        android:shadowColor="@color/white"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:inputType="textEmailAddress"
@@ -54,6 +57,7 @@
         android:imeActionLabel="@string/action_sign_in_short"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
